--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.7.5
 bcrypt==3.2.0
 cffi==1.15.0
 click==8.0.3
+cryptography==36.0.0
 cycler==0.11.0
+DateTime==4.3
 Flask==2.0.2
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
@@ -28,6 +30,7 @@ pkg_resources==0.0.0
 plotly==5.4.0
 psycopg2==2.9.2
 pycparser==2.21
+PyJWT==2.3.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
 python-dotenv==0.19.2
@@ -44,3 +47,4 @@ threadpoolctl==3.0.0
 tomli==1.2.2
 Werkzeug==2.0.2
 zipp==3.6.0
+zope.interface==5.4.0
