--- a/nginx.conf
+++ b/nginx.conf
@@ -10,23 +10,23 @@ http {
   # redirect www -> non-www 
 
   server {
-    server_name www.demo.ahmedbesbes.com;
-    return 301 $scheme://demo.ahmedbesbes.com$request_uri;
+    server_name www.customer_segmentation.com;
+    return 301 $scheme://customer_segmentation.com$request_uri;
   }
   
   # redirect http -> https
 
   server {
     listen 80;
-    server_name demo.ahmedbesbes.com;
-    return 301 https://demo.ahmedbesbes.com$request_uri;
+    server_name customer_segmentation.com;
+    return 301 https://customer_segmentation.com$request_uri;
          }
 
   # read the ssl certificate / key when listening on https
   
    server {
     listen 443 ssl;
-    server_name demo.ahmedbesbes.com;
+    server_name customer_segmentation.com;
     
     ssl_certificate /etc/nginx/certs/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/privkey.pem;
